--- a/CREATIVE.html
+++ b/CREATIVE.html
@@ -8,6 +8,7 @@
         <meta name="author" content="Zatogin Aleksandor (Anekseria)">
         <!--CSS SECTION-->
         <link rel="stylesheet" href="css/main.css">
+        <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.min.css">
         <!----GOOGLE FONTS-->
         <link href='http://fonts.googleapis.com/css?family=Lobster' rel='stylesheet' type='text/css'>
         <link href='http://fonts.googleapis.com/css?family=Sarpanch' rel='stylesheet' type='text/css'>
