--- a/CREATIVE.html
+++ b/CREATIVE.html
@@ -7,8 +7,8 @@
         <meta name="description" content="">
         <meta name="author" content="Zatogin Aleksandor (Anekseria)">
         <!--CSS SECTION-->
-        <link rel="stylesheet" href="css/main.css">
-        <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.min.css">
+        <link rel="stylesheet" href="css/normalize.css">
+        <link rel="stylesheet" href="css/query.css">
         <!----GOOGLE FONTS-->
         <link href='http://fonts.googleapis.com/css?family=Lobster' rel='stylesheet' type='text/css'>
         <link href='http://fonts.googleapis.com/css?family=Sarpanch' rel='stylesheet' type='text/css'>
@@ -149,8 +149,9 @@
                     <li>02-02-044</li>
                     <li>03-03-055</li>
                 </ul>
-                <div id="author">Maid by Anekseria</div>
             </section>
         </div>
+    <script src="js/jquery-1.11.3.min.js"></script>
+        <script src="js/index.js"></script>
     </body>
 </html>
